--- a/maxstreamsperproto/libp2p/protocols/protocol.html
+++ b/maxstreamsperproto/libp2p/protocols/protocol.html
@@ -248,6 +248,13 @@ window.addEventListener("DOMContentLoaded", main2);
     title="maxIncomingStreams=(p: LPProtocol; val: int)">maxIncomingStreams=(p: LPProtocol; val: int)</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">new
+      <li><a class="reference" href="#new%2CtypeLPProtocol%2Cseq%5Bstring%5D%2CLPProtoHandler"
+    title="new(T: type LPProtocol; codecs: seq[string]; handler: LPProtoHandler;
+    maxIncomingStreams: Opt[int] | int = default(Opt[int])): T:type">new(T: type LPProtocol; codecs: seq[string]; handler: LPProtoHandler;
+    maxIncomingStreams: Opt[int] | int = default(Opt[int])): T:type</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -393,6 +400,20 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="new,typeLPProtocol,seq[string],LPProtoHandler" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeLPProtocol%2Cseq%5Bstring%5D%2CLPProtoHandler"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">LPProtocol</span><span class="Other">;</span> <span class="Identifier">codecs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">handler</span><span class="Other">:</span> <a href="protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a><span class="Other">;</span>
+         <span class="Identifier">maxIncomingStreams</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span> <span class="Operator">|</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">default</span><span class="Other">(</span><span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L53"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L53" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 
 </dl></div>
 <div class="section" id="14">
@@ -446,7 +467,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 15:57:30 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 16:28:47 UTC</small>
       </div>
     </div>
   </div>
