--- a/unstable/libp2p/protocols/connectivity/autonat.html
+++ b/unstable/libp2p/protocols/connectivity/autonat.html
@@ -208,10 +208,11 @@ window.addEventListener("DOMContentLoaded", main2);
       <li><a class="reference" href="#Autonat"
     title="Autonat = ref object of LPProtocol
   sem: AsyncSemaphore
-  switch*: Switch">Autonat</a></li>
+  switch*: Switch
+  dialTimeout: Duration">Autonat</a></li>
   <li><a class="reference" href="#AutonatDial"
     title="AutonatDial = object
-  peerInfo: Option[AutonatPeerInfo]">AutonatDial</a></li>
+  peerInfo*: Option[AutonatPeerInfo]">AutonatDial</a></li>
   <li><a class="reference" href="#AutonatDialResponse"
     title="AutonatDialResponse = object
   status*: ResponseStatus
@@ -219,10 +220,15 @@ window.addEventListener("DOMContentLoaded", main2);
   ma*: Option[MultiAddress]">AutonatDialResponse</a></li>
   <li><a class="reference" href="#AutonatError"
     title="AutonatError = object of LPError">AutonatError</a></li>
+  <li><a class="reference" href="#AutonatMsg"
+    title="AutonatMsg = object
+  msgType*: MsgType
+  dial*: Option[AutonatDial]
+  response*: Option[AutonatDialResponse]">AutonatMsg</a></li>
   <li><a class="reference" href="#AutonatPeerInfo"
     title="AutonatPeerInfo = object
-  id: Option[PeerId]
-  addrs: seq[MultiAddress]">AutonatPeerInfo</a></li>
+  id*: Option[PeerId]
+  addrs*: seq[MultiAddress]">AutonatPeerInfo</a></li>
   <li><a class="reference" href="#AutonatUnreachableError"
     title="AutonatUnreachableError = object of LPError">AutonatUnreachableError</a></li>
   <li><a class="reference" href="#MsgType"
@@ -246,7 +252,12 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">encode
+      <ul class="simple nested-toc-section">decode
+      <li><a class="reference" href="#decode%2Ctypedesc%5BAutonatMsg%5D%2Cseq%5Bbyte%5D"
+    title="decode(_: typedesc[AutonatMsg]; buf: seq[byte]): Option[AutonatMsg]">decode(_: typedesc[AutonatMsg]; buf: seq[byte]): Option[AutonatMsg]</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">encode
       <li><a class="reference" href="#encode%2CAutonatDial"
     title="encode(d: AutonatDial): ProtoBuffer">encode(d: AutonatDial): ProtoBuffer</a></li>
   <li><a class="reference" href="#encode%2CAutonatMsg"
@@ -257,7 +268,9 @@ window.addEventListener("DOMContentLoaded", main2);
   </ul>
   <ul class="simple nested-toc-section">new
       <li><a class="reference" href="#new%2Ctypedesc%5BAutonat%5D%2CSwitch%2Cint"
-    title="new(T: typedesc[Autonat]; switch: Switch; semSize: int = 1): T:type">new(T: typedesc[Autonat]; switch: Switch; semSize: int = 1): T:type</a></li>
+    title="new(T: typedesc[Autonat]; switch: Switch; semSize: int = 1;
+    dialTimeout = 15.seconds): T:type">new(T: typedesc[Autonat]; switch: Switch; semSize: int = 1;
+    dialTimeout = 15.seconds): T:type</a></li>
 
   </ul>
 
@@ -306,6 +319,7 @@ class="link-seesrc" target="_blank">Source</a>
 <dt><pre><a href="autonat.html#Autonat"><span class="Identifier">Autonat</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>
   <span class="Identifier">sem</span><span class="Other">:</span> <a href="../../utils/semaphore.html#AsyncSemaphore"><span class="Identifier">AsyncSemaphore</span></a>
   <span class="Identifier">switch</span><span class="Operator">*</span><span class="Other">:</span> <a href="../../transports/transport.html#Switch"><span class="Identifier">Switch</span></a>
+  <span class="Identifier">dialTimeout</span><span class="Other">:</span> <span class="Identifier">Duration</span>
 </pre></dt>
 <dd>
 
@@ -319,7 +333,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="AutonatDial" class="tohide">
 <dt><pre><a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">peerInfo</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatPeerInfo"><span class="Identifier">AutonatPeerInfo</span></a><span class="Other">]</span>
+  <span class="Identifier">peerInfo</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatPeerInfo"><span class="Identifier">AutonatPeerInfo</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -359,10 +373,26 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="AutonatMsg" class="tohide">
+<dt><pre><a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
+  <span class="Identifier">msgType</span><span class="Operator">*</span><span class="Other">:</span> <a href="autonat.html#MsgType"><span class="Identifier">MsgType</span></a>
+  <span class="Identifier">dial</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a><span class="Other">]</span>
+  <span class="Identifier">response</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatDialResponse"><span class="Identifier">AutonatDialResponse</span></a><span class="Other">]</span>
+</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L60"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L60" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="AutonatPeerInfo" class="tohide">
 <dt><pre><a href="autonat.html#AutonatPeerInfo"><span class="Identifier">AutonatPeerInfo</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">id</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span>
-  <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="../../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span>
+  <span class="Identifier">id</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span>
+  <span class="Identifier">addrs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="../../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -435,6 +465,19 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
+<div id="decode,typedesc[AutonatMsg],seq[byte]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#decode%2Ctypedesc%5BAutonatMsg%5D%2Cseq%5Bbyte%5D"><span class="Identifier">decode</span></a><span class="Other">(</span><span class="Operator">_</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">buf</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a><span class="Other">]</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L123"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L123" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="encode,AutonatDial" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatDial"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -448,7 +491,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="encode,AutonatMsg" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatMsg"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <span class="Identifier">AutonatMsg</span><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatMsg"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -472,15 +515,15 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="new,typedesc[Autonat],Switch,int" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2Ctypedesc%5BAutonat%5D%2CSwitch%2Cint"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="autonat.html#Autonat"><span class="Identifier">Autonat</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">switch</span><span class="Other">:</span> <a href="../../transports/transport.html#Switch"><span class="Identifier">Switch</span></a><span class="Other">;</span> <span class="Identifier">semSize</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2Ctypedesc%5BAutonat%5D%2CSwitch%2Cint"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="autonat.html#Autonat"><span class="Identifier">Autonat</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">switch</span><span class="Other">:</span> <a href="../../transports/transport.html#Switch"><span class="Identifier">Switch</span></a><span class="Other">;</span> <span class="Identifier">semSize</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span>
+         <span class="Identifier">dialTimeout</span> <span class="Other">=</span> <span class="DecNumber">15</span><span class="Other">.</span><span class="Identifier">seconds</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L301"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L302"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L301" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L302" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -498,9 +541,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L208"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L209"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L208" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L209" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -510,9 +553,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L306"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/protocols/connectivity/autonat.nim#L307"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L306" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L307" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -526,7 +569,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-22 16:36:19 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-22 19:31:40 UTC</small>
       </div>
     </div>
   </div>
